refactor: Replace Arrays#asList by List#of (#3626)
Reduces compiler warnings when List#of() should be preferred.
Note that an implications are:
- resulting lists are immutable
- eleements must not be null

Co-authored-by: Karsten Thoms <Karsten.Thoms-extern@deutschebahn.com>