@@ -190,7 +190,7 @@ public class EventSubscriptionRestServiceQueryTest extends AbstractRestServiceTe
 
   @Test
   void testWithoutTenantIdParameter() {
-    mockedEventSubscriptionQuery = setUpMockEventSubscriptionQuery(Arrays.asList(MockProvider.createMockEventSubscription(null)));
+    mockedEventSubscriptionQuery = setUpMockEventSubscriptionQuery(List.of(MockProvider.createMockEventSubscription(null)));
 
     Response response =
         given()
@@ -313,7 +313,7 @@ public class EventSubscriptionRestServiceQueryTest extends AbstractRestServiceTe
   }
 
   private List<EventSubscription> createMockEventSubscriptionTwoTenants() {
-    return Arrays.asList(
+    return List.of(
         MockProvider.createMockEventSubscription(MockProvider.EXAMPLE_TENANT_ID),
         MockProvider.createMockEventSubscription(MockProvider.ANOTHER_EXAMPLE_TENANT_ID)
       );
