@@ -1279,7 +1279,7 @@ public class HistoricCaseInstanceRestServiceQueryTest extends AbstractRestServic
 
   @Test
   void testWithoutTenantIdParameter() {
-    mockedQuery = setUpMockHistoricCaseInstanceQuery(Arrays.asList(MockProvider.createMockHistoricCaseInstance(null)));
+    mockedQuery = setUpMockHistoricCaseInstanceQuery(List.of(MockProvider.createMockHistoricCaseInstance(null)));
 
     Response response = given()
       .queryParam("withoutTenantId", true)
@@ -1301,7 +1301,7 @@ public class HistoricCaseInstanceRestServiceQueryTest extends AbstractRestServic
 
   @Test
   void testWithoutTenantIdPostParameter() {
-    mockedQuery = setUpMockHistoricCaseInstanceQuery(Arrays.asList(MockProvider.createMockHistoricCaseInstance(null)));
+    mockedQuery = setUpMockHistoricCaseInstanceQuery(List.of(MockProvider.createMockHistoricCaseInstance(null)));
 
     Map<String, Object> queryParameters = new HashMap<>();
     queryParameters.put("withoutTenantId", true);
@@ -1326,7 +1326,7 @@ public class HistoricCaseInstanceRestServiceQueryTest extends AbstractRestServic
   }
 
   private List<HistoricCaseInstance> createMockHistoricCaseInstancesTwoTenants() {
-    return Arrays.asList(
+    return List.of(
         MockProvider.createMockHistoricCaseInstance(MockProvider.EXAMPLE_TENANT_ID),
         MockProvider.createMockHistoricCaseInstance(MockProvider.ANOTHER_EXAMPLE_TENANT_ID));
   }
