@@ -17,7 +17,6 @@
 package org.operaton.bpm.model.xml.test.assertions;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -120,7 +119,7 @@ public class ModelElementTypeAssert extends AbstractAssert<ModelElementTypeAsser
 
     List<String> actualAttributeNames = getActualAttributeNames();
 
-    if (!actualAttributeNames.containsAll(Arrays.asList(attributeNames))) {
+    if (!actualAttributeNames.containsAll(List.of(attributeNames))) {
       failWithMessage("Expected element type <%s> to have attributes <%s> but has <%s>", typeName, attributeNames, actualAttributeNames);
     }
 
@@ -154,7 +153,7 @@ public class ModelElementTypeAssert extends AbstractAssert<ModelElementTypeAsser
   public ModelElementTypeAssert hasChildElements(ModelElementType... types) {
     isNotNull();
 
-    List<ModelElementType> childElementTypes = Arrays.asList(types);
+    List<ModelElementType> childElementTypes = List.of(types);
     List<ModelElementType> actualChildElementTypes = actual.getChildElementTypes();
 
     if (!actualChildElementTypes.containsAll(childElementTypes)) {
@@ -227,7 +226,7 @@ public class ModelElementTypeAssert extends AbstractAssert<ModelElementTypeAsser
   public ModelElementTypeAssert isExtendedBy(ModelElementType... types) {
     isNotNull();
 
-    List<ModelElementType> extendingTypes = Arrays.asList(types);
+    List<ModelElementType> extendingTypes = List.of(types);
     Collection<ModelElementType> actualExtendingTypes = actual.getExtendingTypes();
 
     if (!actualExtendingTypes.containsAll(extendingTypes)) {
@@ -254,7 +253,7 @@ public class ModelElementTypeAssert extends AbstractAssert<ModelElementTypeAsser
   public ModelElementTypeAssert isNotExtendedBy(ModelElementType... types) {
     isNotNull();
 
-    List<ModelElementType> notExtendingTypes = Arrays.asList(types);
+    List<ModelElementType> notExtendingTypes = List.of(types);
     Collection<ModelElementType> actualExtendingTypes = actual.getExtendingTypes();
 
     List<ModelElementType> errorTypes = new ArrayList<>();
