@@ -19,8 +19,9 @@ package org.operaton.bpm.webapp.neo.plugin.resource;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+
 import jakarta.servlet.ServletContext;
 import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.Response;
@@ -73,7 +74,7 @@ public class AbstractAppPluginRootResourceTest {
 
   @Parameters
   public static Collection<Object[]> getAssets() {
-    return Arrays.asList(new Object[][]{
+    return List.of(new Object[][]{
         {"app/plugin.js", MIME_TYPE_TEXT_JAVASCRIPT, true},
         {"app/plugin.css", MIME_TYPE_TEXT_CSS, true},
         {"app/asset.js", MIME_TYPE_TEXT_JAVASCRIPT, true},
