@@ -19,7 +19,6 @@ package org.operaton.bpm.webapp.impl.db;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -96,7 +95,7 @@ public @NullMarked class QuerySessionFactory extends StandaloneProcessEngineConf
   protected String buildMappings(List<String> mappingFiles) {
 
     List<String> mappings = new ArrayList<>(mappingFiles);
-    mappings.addAll(Arrays.asList(DEFAULT_MAPPING_FILES));
+    mappings.addAll(List.of(DEFAULT_MAPPING_FILES));
 
     StringBuilder builder = new StringBuilder();
     for (String mappingFile: mappings) {
